--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #282c34;
 }
 
 .App-link {
@@ -35,4 +35,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.App .score {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.App .score p {
+  margin-right: 40px;
+  margin-bottom: 50px;
+}
+
+.App span{
+  margin-right: 50px;
+}
+
+.App button {
+  height: 40px;
+  width: 100px;
+  cursor: pointer;
+  margin-top: 50px;
 }
